--- a/Customizable-Cinnamon/cinnamon/sass/custom-variables.scss
+++ b/Customizable-Cinnamon/cinnamon/sass/custom-variables.scss
@@ -2,3 +2,5 @@
  * Use this file to set variables
  * All variables and their default values are contained in base/variables.scss
  */
+ $base-color: rgba(70, 63, 70, .60);
+ $base-accent-color: rgb(46, 41, 78);
